--- a/3.html
+++ b/3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中山大学体育场馆预订系统 - 模拟</title>
+    <title>中山大学体育场馆预订系统</title>
     <style>
         /* --- 基本重置和全局样式 --- */
         body {
