--- a/3.html
+++ b/3.html
@@ -739,22 +739,24 @@
 
         /* --- 9. 底部信息 --- */
         .footer {
-            background-color: #f4f4f4;
-            /* 和内容区背景一致 */
-            color: #aaa;
-            /* 灰色文字 */
+            background-color: #383934;
+            /* <<< 1. 改为黑色背景 */
+            color: #FFFFFF;
+            /* <<< 2. 改为白色文字 */
             font-size: 12px;
-            padding: 20px 15px;
-            /* 增加上下内边距 */
-            text-align: center;
-            line-height: 1.6;
-            /* 调整行高 */
-            border-top: 1px solid #eee;
-            /* 可能需要一个顶部线条 */
+            /* 保持字体大小 */
+            padding: 15px;
+            /* <<< 3. 调整内边距 (上下左右均为 15px) */
+            text-align: left;
+            /* <<< 4. 改为左对齐 */
+            line-height: 1.4;
+            /* <<< 5. 调整行高，使两行更紧凑 */
+            /* border-top: 1px solid #eee; <<< 6. 移除顶部边框 */
         }
 
         .footer p {
             margin: 0;
+            /* 保持段落间无外边距 */
         }
 
         /* --- 10. Modal (弹窗) 样式 (更新后) --- */
@@ -1018,7 +1020,7 @@
                     <!-- 新增: 包裹卡片的容器 (保持不变) -->
                     <div class="booking-card-wrapper">
                         <!-- ======== 开始: 修改后的 booking-card 结构 ======== -->
-                        <div class="booking-card" data-venue="深圳校区健身房" data-date="2025年5月4日" data-time="18:00 - 20:00"
+                        <div class="booking-card" data-venue="深圳校区健身房" data-date="2025年5月4日" data-time="14:00 - 16:00"
                             data-location="深圳校区健身房-场地1" data-booking-id="#RB-B805AT52XQ" data-price="运动时 ¥5">
 
                             <div class="card-layout-wrapper"> <!-- 1. 新增: Flex 容器用于分列 -->
@@ -1086,7 +1088,7 @@
                                                         <line x1="10" y1="10" x2="13.5" y2="10"></line>
                                                     </g>
                                                 </svg>
-                                                <span>18:00 - 20:00</span>
+                                                <span>14:00 - 16:00</span>
                                             </div>
                                             <div class="time-info">
                                                 <!-- 定位图标 SVG -->
@@ -1127,28 +1129,29 @@
         <!-- 7. 底部信息 -->
         <div class="footer">
             <p>中山大学体育场馆预约系统</p>
-            <p>技术支持: xxxx</p> <!-- 按需修改 -->
+            <p>广东省广州市海珠区新港西路135号</p>
         </div>
+    </div>
 
-        <!-- 8. Modal (弹窗) 结构 -->
-        <div id="booking-modal-overlay" class="modal-overlay">
-            <div id="booking-modal" class="modal">
-                <div class="modal-content">
-                    <h2 class="modal-title">我的预约</h2>
-                    <div class="modal-details">
-                        <p><strong>场馆：</strong> <span id="modal-venue">深圳校区健身房</span></p>
-                        <p><strong>预约日期：</strong> <span id="modal-date">2025年5月4日</span></p>
-                        <p><strong>预约时段：</strong> <span id="modal-time">18:00 - 20:00</span></p>
-                        <p><strong>场地名称：</strong> <span id="modal-location">深圳校区健身房-场地1</span></p>
-                        <p><strong>预约编号：</strong> <span id="modal-booking-id">#RB-B805AT52XQ</span></p>
-                        <p><strong>费用：</strong> <span id="modal-price">运动时 ¥5</span></p>
-                    </div>
-                    <div class="modal-actions">
-                        <button id="modal-confirm-button" class="modal-button-confirm">确认</button>
-                    </div>
+    <!-- 8. Modal (弹窗) 结构 -->
+    <div id="booking-modal-overlay" class="modal-overlay">
+        <div id="booking-modal" class="modal">
+            <div class="modal-content">
+                <h2 class="modal-title">我的预约</h2>
+                <div class="modal-details">
+                    <p><strong>场馆：</strong> <span id="modal-venue">深圳校区健身房</span></p>
+                    <p><strong>预约日期：</strong> <span id="modal-date">2025年5月4日</span></p>
+                    <p><strong>预约时段：</strong> <span id="modal-time">18:00 - 20:00</span></p>
+                    <p><strong>场地名称：</strong> <span id="modal-location">深圳校区健身房-场地1</span></p>
+                    <p><strong>预约编号：</strong> <span id="modal-booking-id">#RB-B805AT52XQ</span></p>
+                    <p><strong>费用：</strong> <span id="modal-price">运动时 ¥5</span></p>
+                </div>
+                <div class="modal-actions">
+                    <button id="modal-confirm-button" class="modal-button-confirm">确认</button>
                 </div>
             </div>
         </div>
+    </div>
 
     </div> <!-- end mobile-container -->
 
